--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: WebUI Community Support
-    url: https://github.com/AUTOMATIC1111/stable-diffusion-webui/discussions
+    url: https://github.com/A U T O M A T I C 1 1 1 1 / s t a b l e - d i f f u s i o n - w e b u i/discussions
     about: Please ask and answer questions here.
